# libxmppsocket

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: cbuffer.h  socket.c  xmpp_socket.c  xmpp_socket.h
